parser/team02/proyec/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AMPER
    AND
    AS
    BAR
    CORCHIN
    CORCHOUT
    CURRENT_DATE
    CURRENT_TIME
    DATABASES
    DATE_PART
    DAY
    DEFAULT
    DIV
    DOSPUNTOS
    EXISTS
    EXP
    EXTRACT
    HORA
    HOUR
    IF
    ILIKE
    INNER
    INTERVAL
    JOIN
    LIKE
    MAS
    MENOS
    MINUTE
    MODE
    MONTH
    NOT
    NOW
    OR
    OR2
    ORDER
    OWNER
    PORC
    PRECISION
    RENAME
    REPLACE
    SECOND
    SHOW
    SIMILAR
    TIME
    TO
    USING
    VARYING
    WITH
    WITHOUT
    YEAR
    ZONE

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> creartable PUNTOCOMA
Rule 5     instruccion -> creartable INHERITS PARENIN ID PARENOUT PUNTOCOMA
Rule 6     instruccion -> createbase PUNTOCOMA
Rule 7     instruccion -> selecttable PUNTOCOMA
Rule 8     instruccion -> DROP TABLE ID PUNTOCOMA
Rule 9     instruccion -> altertable
Rule 10    instruccion -> ddm PUNTOCOMA
Rule 11    instruccion -> error
Rule 12    createbase -> CREATE DATABASE ID
Rule 13    createbase -> CREATE error DATABASE ID
Rule 14    createbase -> CREATE DATABASE error ID
Rule 15    altertable -> ALTER TABLE ID
Rule 16    altertable -> ALTER COLUMN ID TYPE TIPODATO
Rule 17    altertable -> ALTER TABLE ID ADD COLUMN ID TIPODATO
Rule 18    altertable -> ALTER TABLE ID ADD CHECK PARENIN condition PARENOUT
Rule 19    altertable -> ALTER TABLE ID DROP COLUMN ID
Rule 20    altertable -> ALTER TABLE ID DROP CONSTRAINT ID
Rule 21    altertable -> ALTER TABLE ID ALTER COLUMN ID SET NOT2 NULL
Rule 22    ddm -> INSERT INTO ID VALUES PARENIN valores PARENOUT
Rule 23    ddm -> UPDATE ID SET ID IGUAL valor wherecondicion
Rule 24    ddm -> UPDATE ID SET ID IGUAL valor
Rule 25    ddm -> DELETE FROM ID wherecondicion
Rule 26    wherecondicion -> WHERE condition
Rule 27    wherecondicion -> WHERE condition AND2 condition
Rule 28    creartable -> CREATE TABLE ID PARENIN params PARENOUT
Rule 29    selecttable -> SELECT selectclausules FROM selectbody
Rule 30    selecttable -> SELECT selectclausules FROM selectbody wherecondicion
Rule 31    selecttable -> SELECT selectclausules FROM selectbody wherecondicion GROUP BY valores
Rule 32    selecttable -> SELECT selectclausules FROM selectbody wherecondicion GROUP BY valores HAVING funciones
Rule 33    selectbody -> ID
Rule 34    selectbody -> PARENIN selecttable PARENOUT
Rule 35    selectbody -> ID ID
Rule 36    selectclausules -> POR
Rule 37    selectclausules -> valores
Rule 38    selectclausules -> DISTINCT valores
Rule 39    selectclausules -> SUBSTRING PARENIN valor COMA valor COMA valor PARENOUT
Rule 40    funciones -> SUM PARENIN ID PARENOUT signos valor
Rule 41    params -> params COMA expresion
Rule 42    params -> expresion
Rule 43    valores -> valores COMA valor
Rule 44    valores -> valor
Rule 45    expresion -> ID TIPODATO
Rule 46    expresion -> PRIMARY KEY PARENIN ID PARENOUT
Rule 47    expresion -> FOREIGN KEY PARENIN ID PARENOUT REFERENCES ID PARENIN ID PARENOUT
Rule 48    condition -> valor signos valor
Rule 49    condition -> valor BETWEEN valor AND2 valor
Rule 50    condition -> SUBSTRING PARENIN valor COMA valor COMA valor PARENOUT signos valor
Rule 51    signos -> MENOR
Rule 52    signos -> MAYOR
Rule 53    signos -> MENOROIGUAL
Rule 54    signos -> MAYOROIGUAL
Rule 55    signos -> IGUALIGUAL
Rule 56    signos -> IGUAL
Rule 57    signos -> NOT2 IN
Rule 58    signos -> IN
Rule 59    signos -> NOIGUAL
Rule 60    signos -> IS NOT2 DISTINCT FROM
Rule 61    signos -> IS DISTINCT FROM
Rule 62    valor -> ENTERO
Rule 63    valor -> DECIMAL
Rule 64    valor -> APOST FECHA APOST
Rule 65    valor -> CADENA
Rule 66    valor -> CADENA2
Rule 67    valor -> ID
Rule 68    valor -> ID PUNTO ID
Rule 69    valor -> PARENIN selecttable PARENOUT
Rule 70    TIPODATO -> TEXT
Rule 71    TIPODATO -> SMALLINT
Rule 72    TIPODATO -> INTEGER
Rule 73    TIPODATO -> INT
Rule 74    TIPODATO -> BIGINT
Rule 75    TIPODATO -> DECIMAL2
Rule 76    TIPODATO -> NUMERIC
Rule 77    TIPODATO -> REAL
Rule 78    TIPODATO -> DOUBLE
Rule 79    TIPODATO -> CHARACTER
Rule 80    TIPODATO -> CHAR PARENIN ENTERO PARENOUT
Rule 81    TIPODATO -> TIMESTAMP
Rule 82    TIPODATO -> DATETIME
Rule 83    TIPODATO -> FLOAT
Rule 84    TIPODATO -> DATE
Rule 85    TIPODATO -> MONEY
Rule 86    TIPODATO -> VARCHAR PARENIN ENTERO PARENOUT

Terminals, with rules where they appear

ADD                  : 17 18
ALTER                : 15 16 17 18 19 20 21 21
AMPER                : 
AND                  : 
AND2                 : 27 49
APOST                : 64 64
AS                   : 
BAR                  : 
BETWEEN              : 49
BIGINT               : 74
BY                   : 31 32
CADENA               : 65
CADENA2              : 66
CHAR                 : 80
CHARACTER            : 79
CHECK                : 18
COLUMN               : 16 17 19 21
COMA                 : 39 39 41 43 50 50
CONSTRAINT           : 20
CORCHIN              : 
CORCHOUT             : 
CREATE               : 12 13 14 28
CURRENT_DATE         : 
CURRENT_TIME         : 
DATABASE             : 12 13 14
DATABASES            : 
DATE                 : 84
DATETIME             : 82
DATE_PART            : 
DAY                  : 
DECIMAL              : 63
DECIMAL2             : 75
DEFAULT              : 
DELETE               : 25
DISTINCT             : 38 60 61
DIV                  : 
DOSPUNTOS            : 
DOUBLE               : 78
DROP                 : 8 19 20
ENTERO               : 62 80 86
EXISTS               : 
EXP                  : 
EXTRACT              : 
FECHA                : 64
FLOAT                : 83
FOREIGN              : 47
FROM                 : 25 29 30 31 32 60 61
GROUP                : 31 32
HAVING               : 32
HORA                 : 
HOUR                 : 
ID                   : 5 8 12 13 14 15 16 17 17 18 19 19 20 20 21 21 22 23 23 24 24 25 28 33 35 35 40 45 46 47 47 47 67 68 68
IF                   : 
IGUAL                : 23 24 56
IGUALIGUAL           : 55
ILIKE                : 
IN                   : 57 58
INHERITS             : 5
INNER                : 
INSERT               : 22
INT                  : 73
INTEGER              : 72
INTERVAL             : 
INTO                 : 22
IS                   : 60 61
JOIN                 : 
KEY                  : 46 47
LIKE                 : 
MAS                  : 
MAYOR                : 52
MAYOROIGUAL          : 54
MENOR                : 51
MENOROIGUAL          : 53
MENOS                : 
MINUTE               : 
MODE                 : 
MONEY                : 85
MONTH                : 
NOIGUAL              : 59
NOT                  : 
NOT2                 : 21 57 60
NOW                  : 
NULL                 : 21
NUMERIC              : 76
OR                   : 
OR2                  : 
ORDER                : 
OWNER                : 
PARENIN              : 5 18 22 28 34 39 40 46 47 47 50 69 80 86
PARENOUT             : 5 18 22 28 34 39 40 46 47 47 50 69 80 86
POR                  : 36
PORC                 : 
PRECISION            : 
PRIMARY              : 46
PUNTO                : 68
PUNTOCOMA            : 4 5 6 7 8 10
REAL                 : 77
REFERENCES           : 47
RENAME               : 
REPLACE              : 
SECOND               : 
SELECT               : 29 30 31 32
SET                  : 21 23 24
SHOW                 : 
SIMILAR              : 
SMALLINT             : 71
SUBSTRING            : 39 50
SUM                  : 40
TABLE                : 8 15 17 18 19 20 21 28
TEXT                 : 70
TIME                 : 
TIMESTAMP            : 81
TO                   : 
TYPE                 : 16
UPDATE               : 23 24
USING                : 
VALUES               : 22
VARCHAR              : 86
VARYING              : 
WHERE                : 26 27
WITH                 : 
WITHOUT              : 
YEAR                 : 
ZONE                 : 
error                : 11 13 14

Nonterminals, with rules where they appear

TIPODATO             : 16 17 45
altertable           : 9
condition            : 18 26 27 27
creartable           : 4 5
createbase           : 6
ddm                  : 10
expresion            : 41 42
funciones            : 32
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2
params               : 28 41
selectbody           : 29 30 31 32
selectclausules      : 29 30 31 32
selecttable          : 7 34 69
signos               : 40 48 50
valor                : 23 24 39 39 39 40 43 44 48 48 49 49 49 50 50 50 50
valores              : 22 31 32 37 38 43
wherecondicion       : 23 25 30 31 32

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . creartable PUNTOCOMA
    (5) instruccion -> . creartable INHERITS PARENIN ID PARENOUT PUNTOCOMA
    (6) instruccion -> . createbase PUNTOCOMA
    (7) instruccion -> . selecttable PUNTOCOMA
    (8) instruccion -> . DROP TABLE ID PUNTOCOMA
    (9) instruccion -> . altertable
    (10) instruccion -> . ddm PUNTOCOMA
    (11) instruccion -> . error
    (28) creartable -> . CREATE TABLE ID PARENIN params PARENOUT
    (12) createbase -> . CREATE DATABASE ID
    (13) createbase -> . CREATE error DATABASE ID
    (14) createbase -> . CREATE DATABASE error ID
    (29) selecttable -> . SELECT selectclausules FROM selectbody
    (30) selecttable -> . SELECT selectclausules FROM selectbody wherecondicion
    (31) selecttable -> . SELECT selectclausules FROM selectbody wherecondicion GROUP BY valores
    (32) selecttable -> . SELECT selectclausules FROM selectbody wherecondicion GROUP BY valores HAVING funciones
    (15) altertable -> . ALTER TABLE ID
    (16) altertable -> . ALTER COLUMN ID TYPE TIPODATO
    (17) altertable -> . ALTER TABLE ID ADD COLUMN ID TIPODATO
    (18) altertable -> . ALTER TABLE ID ADD CHECK PARENIN condition PARENOUT
    (19) altertable -> . ALTER TABLE ID DROP COLUMN ID
    (20) altertable -> . ALTER TABLE ID DROP CONSTRAINT ID
    (21) altertable -> . ALTER TABLE ID ALTER COLUMN ID SET NOT2 NULL
    (22) ddm -> . INSERT INTO ID VALUES PARENIN valores PARENOUT
    (23) ddm -> . UPDATE ID SET ID IGUAL valor wherecondicion
    (24) ddm -> . UPDATE ID SET ID IGUAL valor
    (25) ddm -> . DELETE FROM ID wherecondicion

    DROP            shift and go to state 7
    error           shift and go to state 10
    CREATE          shift and go to state 11
    SELECT          shift and go to state 12
    ALTER           shift and go to state 13
    INSERT          shift and go to state 14
    UPDATE          shift and go to state 15
    DELETE          shift and go to state 16

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    creartable                     shift and go to state 4
    createbase                     shift and go to state 5
    selecttable                    shift and go to state 6
    altertable                     shift and go to state 8
    ddm                            shift and go to state 9

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . creartable PUNTOCOMA
    (5) instruccion -> . creartable INHERITS PARENIN ID PARENOUT PUNTOCOMA
    (6) instruccion -> . createbase PUNTOCOMA
    (7) instruccion -> . selecttable PUNTOCOMA
    (8) instruccion -> . DROP TABLE ID PUNTOCOMA
    (9) instruccion -> . altertable
    (10) instruccion -> . ddm PUNTOCOMA
    (11) instruccion -> . error
    (28) creartable -> . CREATE TABLE ID PARENIN params PARENOUT
    (12) createbase -> . CREATE DATABASE ID
    (13) createbase -> . CREATE error DATABASE ID
    (14) createbase -> . CREATE DATABASE error ID
    (29) selecttable -> . SELECT selectclausules FROM selectbody
    (30) selecttable -> . SELECT selectclausules FROM selectbody wherecondicion
    (31) selecttable -> . SELECT selectclausules FROM selectbody wherecondicion GROUP BY valores
    (32) selecttable -> . SELECT selectclausules FROM selectbody wherecondicion GROUP BY valores HAVING funciones
    (15) altertable -> . ALTER TABLE ID
    (16) altertable -> . ALTER COLUMN ID TYPE TIPODATO
    (17) altertable -> . ALTER TABLE ID ADD COLUMN ID TIPODATO
    (18) altertable -> . ALTER TABLE ID ADD CHECK PARENIN condition PARENOUT
    (19) altertable -> . ALTER TABLE ID DROP COLUMN ID
    (20) altertable -> . ALTER TABLE ID DROP CONSTRAINT ID
    (21) altertable -> . ALTER TABLE ID ALTER COLUMN ID SET NOT2 NULL
    (22) ddm -> . INSERT INTO ID VALUES PARENIN valores PARENOUT
    (23) ddm -> . UPDATE ID SET ID IGUAL valor wherecondicion
    (24) ddm -> . UPDATE ID SET ID IGUAL valor
    (25) ddm -> . DELETE FROM ID wherecondicion

    $end            reduce using rule 1 (init -> instrucciones .)
    DROP            shift and go to state 7
    error           shift and go to state 10
    CREATE          shift and go to state 11
    SELECT          shift and go to state 12
    ALTER           shift and go to state 13
    INSERT          shift and go to state 14
    UPDATE          shift and go to state 15
    DELETE          shift and go to state 16

    instruccion                    shift and go to state 17
    creartable                     shift and go to state 4
    createbase                     shift and go to state 5
    selecttable                    shift and go to state 6
    altertable                     shift and go to state 8
    ddm                            shift and go to state 9

state 3

    (3) instrucciones -> instruccion .

    DROP            reduce using rule 3 (instrucciones -> instruccion .)
    error           reduce using rule 3 (instrucciones -> instruccion .)
    CREATE          reduce using rule 3 (instrucciones -> instruccion .)
    SELECT          reduce using rule 3 (instrucciones -> instruccion .)
    ALTER           reduce using rule 3 (instrucciones -> instruccion .)
    INSERT          reduce using rule 3 (instrucciones -> instruccion .)
    UPDATE          reduce using rule 3 (instrucciones -> instruccion .)
    DELETE          reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> creartable . PUNTOCOMA
    (5) instruccion -> creartable . INHERITS PARENIN ID PARENOUT PUNTOCOMA

    PUNTOCOMA       shift and go to state 18
    INHERITS        shift and go to state 19


state 5

    (6) instruccion -> createbase . PUNTOCOMA

    PUNTOCOMA       shift and go to state 20


state 6

    (7) instruccion -> selecttable . PUNTOCOMA

    PUNTOCOMA       shift and go to state 21


state 7

    (8) instruccion -> DROP . TABLE ID PUNTOCOMA

    TABLE           shift and go to state 22


state 8

    (9) instruccion -> altertable .

    DROP            reduce using rule 9 (instruccion -> altertable .)
    error           reduce using rule 9 (instruccion -> altertable .)
    CREATE          reduce using rule 9 (instruccion -> altertable .)
    SELECT          reduce using rule 9 (instruccion -> altertable .)
    ALTER           reduce using rule 9 (instruccion -> altertable .)
    INSERT          reduce using rule 9 (instruccion -> altertable .)
    UPDATE          reduce using rule 9 (instruccion -> altertable .)
    DELETE          reduce using rule 9 (instruccion -> altertable .)
    $end            reduce using rule 9 (instruccion -> altertable .)


state 9

    (10) instruccion -> ddm . PUNTOCOMA

    PUNTOCOMA       shift and go to state 23


state 10

    (11) instruccion -> error .

    DROP            reduce using rule 11 (instruccion -> error .)
    error           reduce using rule 11 (instruccion -> error .)
    CREATE          reduce using rule 11 (instruccion -> error .)
    SELECT          reduce using rule 11 (instruccion -> error .)
    ALTER           reduce using rule 11 (instruccion -> error .)
    INSERT          reduce using rule 11 (instruccion -> error .)
    UPDATE          reduce using rule 11 (instruccion -> error .)
    DELETE          reduce using rule 11 (instruccion -> error .)
    $end            reduce using rule 11 (instruccion -> error .)


state 11

    (28) creartable -> CREATE . TABLE ID PARENIN params PARENOUT
    (12) createbase -> CREATE . DATABASE ID
    (13) createbase -> CREATE . error DATABASE ID
    (14) createbase -> CREATE . DATABASE error ID

    TABLE           shift and go to state 24
    DATABASE        shift and go to state 25
    error           shift and go to state 26


state 12

    (29) selecttable -> SELECT . selectclausules FROM selectbody
    (30) selecttable -> SELECT . selectclausules FROM selectbody wherecondicion
    (31) selecttable -> SELECT . selectclausules FROM selectbody wherecondicion GROUP BY valores
    (32) selecttable -> SELECT . selectclausules FROM selectbody wherecondicion GROUP BY valores HAVING funciones
    (36) selectclausules -> . POR
    (37) selectclausules -> . valores
    (38) selectclausules -> . DISTINCT valores
    (39) selectclausules -> . SUBSTRING PARENIN valor COMA valor COMA valor PARENOUT
    (43) valores -> . valores COMA valor
    (44) valores -> . valor
    (62) valor -> . ENTERO
    (63) valor -> . DECIMAL
    (64) valor -> . APOST FECHA APOST
    (65) valor -> . CADENA
    (66) valor -> . CADENA2
    (67) valor -> . ID
    (68) valor -> . ID PUNTO ID
    (69) valor -> . PARENIN selecttable PARENOUT

    POR             shift and go to state 29
    DISTINCT        shift and go to state 30
    SUBSTRING       shift and go to state 31
    ENTERO          shift and go to state 34
    DECIMAL         shift and go to state 35
    APOST           shift and go to state 36
    CADENA          shift and go to state 37
    CADENA2         shift and go to state 38
    ID              shift and go to state 39
    PARENIN         shift and go to state 32

    selectclausules                shift and go to state 27
    valores                        shift and go to state 28
    valor                          shift and go to state 33

state 13

    (15) altertable -> ALTER . TABLE ID
    (16) altertable -> ALTER . COLUMN ID TYPE TIPODATO
    (17) altertable -> ALTER . TABLE ID ADD COLUMN ID TIPODATO
    (18) altertable -> ALTER . TABLE ID ADD CHECK PARENIN condition PARENOUT
    (19) altertable -> ALTER . TABLE ID DROP COLUMN ID
    (20) altertable -> ALTER . TABLE ID DROP CONSTRAINT ID
    (21) altertable -> ALTER . TABLE ID ALTER COLUMN ID SET NOT2 NULL

    TABLE           shift and go to state 40
    COLUMN          shift and go to state 41


state 14

    (22) ddm -> INSERT . INTO ID VALUES PARENIN valores PARENOUT

    INTO            shift and go to state 42


state 15

    (23) ddm -> UPDATE . ID SET ID IGUAL valor wherecondicion
    (24) ddm -> UPDATE . ID SET ID IGUAL valor

    ID              shift and go to state 43


state 16

    (25) ddm -> DELETE . FROM ID wherecondicion

    FROM            shift and go to state 44


state 17

    (2) instrucciones -> instrucciones instruccion .

    DROP            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    error           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    CREATE          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    SELECT          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ALTER           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    INSERT          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    UPDATE          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    DELETE          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 18

    (4) instruccion -> creartable PUNTOCOMA .

